# claude-code-plugins-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
plans/: 20260221-1851-phase1-sdk.md  20260221-1911-remote-fetch.md  20260222-2141-validation.md  20260223-management-api.md
src/claude_code_plugins_sdk/: __init__.py  _plugin.py  errors.py
src/claude_code_plugins_sdk/agent/: __init__.py  _runtime.py
src/claude_code_plugins_sdk/fetchers/: __init__.py  _dispatcher.py  _git.py  _http.py
src/claude_code_plugins_sdk/loaders/: __init__.py  marketplace.py  plugin.py
src/claude_code_plugins_sdk/manager/: __init__.py  _adapters.py  _in_memory.py  _manager.py  _protocols.py
src/claude_code_plugins_sdk/models/: __init__.py  agent.py  command.py  hook.py  lsp.py  marketplace.py  mcp.py  plugin.py  skill.py  state.py
src/claude_code_plugins_sdk/validation/: __init__.py  _marketplace.py  _plugin.py  _result.py
tests/: test_agent_runtime.py  test_errors.py  test_fetchers.py  test_loaders.py  test_manager.py  test_manager_adapters.py  test_models_components.py  test_models_marketplace.py  test_models_plugin.py  test_validation.py
tests/fixtures/marketplace/.claude-plugin/: marketplace.json  minimal-marketplace.json
tests/fixtures/plugin/: .lsp.json  .mcp.json
tests/fixtures/plugin/.claude-plugin/: plugin.json
tests/fixtures/plugin/agents/: minimal.md  reviewer.md
tests/fixtures/plugin/commands/: review.md
tests/fixtures/plugin/hooks/: hooks.json
tests/fixtures/plugin/skills/code-review/: SKILL.md
