[project]
name = "claude-code-plugins-sdk"
version = "0.1.0"
description = "Python SDK for Claude Code plugins and marketplaces"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Doron Cohen", email = "4966182+doron-cohen@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "plugins", "marketplace", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "python-frontmatter>=1.1",
]

[project.urls]
Repository = "https://github.com/doron-cohen/claude-code-plugins-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_plugins_sdk"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["claude_code_plugins_sdk"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_code_plugins_sdk --cov-report=term-missing"
