[project]
name = "claude-code-plugins-sdk"
dynamic = ["version"]
description = "Python SDK for Claude Code plugins and marketplaces"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Doron Cohen", email = "4966182+doron-cohen@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "plugins", "marketplace", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "python-frontmatter>=1.1",
]

[project.urls]
Repository = "https://github.com/doron-cohen/claude-code-plugins-sdk"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_plugins_sdk"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pytest-httpx>=0.36.0",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TC"]
ignore = ["E501", "TC001", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["claude_code_plugins_sdk"]


[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
allowed-unresolved-imports = ["frontmatter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_code_plugins_sdk --cov-report=term-missing"
markers = ["integration: marks tests that require network access (deselect with '-m not integration')"]
